tests/throw/throw.exp
Error ---------------------------------------------------------------------------------------------------- test.js:13:12

Cannot perform arithmetic operation because string [1] is not a number. [unsafe-addition]

   test.js:13:12
   13|     return a*1; // a is not null
                  ^

References:
   test.js:9:16
    9| function g(a: ?string) {
                      ^^^^^^ [1]



Found 1 error
